# campinas-telecom-network

./: .gitignore  1-eda.ipynb  2-rede-complexa.ipynb  4-analises-avancadas.ipynb  CLAUDE.md  Lavras.parquet  PIPELINE_AGENT.md  README.md  analise-exploratoria.ipynb  config.py  eda.ipynb  main.py  pyproject.toml  requirements.txt
config/: campinas.yaml  default.yaml  lavras.yaml
notebooks/: 1-eda.ipynb  2-rede-complexa.ipynb  4-analises-avancadas.ipynb
src/: exporter.py  graph_builder.py  utils.py
src/pipeline/: advanced.py  eda.py  spatial.py  topology.py
