[project]
name = "projetos-dados-telefonicos"
version = "1.0.0"
description = "Pipeline modular para análise de redes telefônicas urbanas por métodos de redes complexas."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "networkx>=3.6",
    "scipy>=1.13",
    "shapely>=2.0",
    "geopandas>=0.14",
    "contextily>=1.6",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
